--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,50 @@
-altgraph==0.10.2
-appdirs==1.4.4
 appnope==0.1.0
-asn1crypto==0.24.0
-attrs==20.2.0
-backports-abc==0.5
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-bdist-mpkg==0.5.0
-bleach==3.2.1
-bonjour-py==0.3
-cffi==1.12.2
+backcall==0.2.0
+certifi==2020.6.20
 click==7.1.2
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.6.1
+cycler==0.10.0
 decorator==4.4.2
-defusedxml==0.6.0
-distlib==0.3.1
-entrypoints==0.3
-enum34==1.1.6
-filelock==3.0.12
+dnspython==1.16.0
 Flask==1.1.2
+Flask-Cors==3.0.9
 Flask-PyMongo==2.3.0
-functools32==3.2.3.post2
-future==0.17.1
-futures==3.3.0
-importlib-metadata==2.0.0
-importlib-resources==3.2.0
-ipaddress==1.0.22
-ipykernel==4.10.1
-ipython==5.10.0
+ipykernel==5.3.4
+ipython==7.19.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.2
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.5
-jupyter-console==5.2.0
+joblib==0.17.0
+jupyter-client==6.1.7
 jupyter-core==4.6.3
-macholib==1.5.1
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
-matplotlib==1.3.1
-mistune==0.8.4
-modulegraph==0.10.4
-nbconvert==5.6.1
-nbformat==4.4.0
-notebook==5.7.10
-numpy==1.8.0rc1
-packaging==20.4
-pandocfilters==1.4.3
-pathlib2==2.3.5
+matplotlib==3.3.2
+numpy==1.19.4
+pandas==1.1.4
+parso==0.7.1
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client==0.8.0
-prompt-toolkit==1.0.18
+Pillow==8.0.1
+prompt-toolkit==3.0.8
 ptyprocess==0.6.0
-py2app==0.7.3
-pycparser==2.19
-Pygments==2.5.2
+Pygments==2.7.2
 pymongo==3.11.0
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==19.0.0
 pyparsing==2.4.7
-pyrsistent==0.16.1
 python-dateutil==2.8.1
-pytz==2013.7
+pytz==2020.4
 pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-scandir==1.10.0
-scipy==0.13.0b1
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-terminado==0.8.3
-testpath==0.4.4
-tornado==5.1.1
-traitlets==4.3.3
-typing==3.7.4.3
-virtualenv==20.1.0
+scikit-learn==0.23.2
+scipy==1.5.4
+seaborn==0.11.0
+six==1.15.0
+sklearn==0.0
+statsmodels==0.12.1
+threadpoolctl==2.1.0
+tornado==6.1
+traitlets==5.0.5
+uuid==1.30
 wcwidth==0.2.5
-webencodings==0.5.1
 Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-xattr==0.6.4
-zipp==1.2.0
+xlrd==1.2.0
