--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ dnspython==1.16.0
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-PyMongo==2.3.0
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
+# ipykernel==5.3.4
+# ipython==7.19.0
+# ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
