--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ dnspython==1.16.0
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-PyMongo==2.3.0
-# ipykernel==5.3.4
-# ipython==7.19.0
-# ipython-genutils==0.2.0
+ipykernel==5.3.4
+ipython==7.16.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
@@ -43,7 +43,7 @@ sklearn==0.0
 statsmodels==0.12.1
 threadpoolctl==2.1.0
 tornado==6.1
-traitlets==5.0.5
+traitlets==4.2.2
 uuid==1.30
 wcwidth==0.2.5
 Werkzeug==1.0.1
