--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dnspython==1.16.0
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-PyMongo==2.3.0
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
